Squish text, fix keyboard navigation

--- a/public/src/css/search.css
+++ b/public/src/css/search.css
@@ -110,18 +110,12 @@
 	width: calc(100% - (var(--course-width) + 0.4em) * 5 - 0.6em);
 }
 
-.song-search-result-info::after {
-	content: "";
-	display: block;
-	position: absolute;
-	top: 0;
-	right: 0;
-	width: 2em;
-	height: 100%;
+.song-search-result-title,
+.song-search-result-subtitle {
+	transform-origin: left;
 }
 
 .song-search-result-subtitle {
-    display: block;
     font-size: 0.8em;
     margin-top: 0.5em;
 }
